--- a/src/assets/stylesheets/layout/_header.scss
+++ b/src/assets/stylesheets/layout/_header.scss
@@ -220,7 +220,7 @@
     // [tablet landscape +]: Show the reposistory from tablet
     @include break-from-device(tablet landscape) {
       display: block;
-      width: px2rem(234px);
+      width: 100%; //px2rem(234px);
       max-width: px2rem(234px);
       padding: 10px;
 
@@ -232,7 +232,7 @@
     }
     // Adjust for hidden label on small size
     @media only screen and (max-width: 1220px) {
-      width: px2rem(80px);
+      width: 100% //px2rem(80px);
     }
   }
 }
